<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/page_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        style="@style/listFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/min_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/boat_description" />

    <TextView
        android:id="@+id/textView2"
        style="@style/listFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/max_spinnner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/boat_titles" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

</LinearLayout>